# amrl-mercury

./: .gitignore  LICENSE  README.md  backup.py  install.sh  setup.py
example/: joy_example.py
mercury/: __init__.py  joy.py  logger.py  native_joy.py  power.py
mercury-common/: CMakeLists.txt
mercury-common/msg/: EposError.msg
mercury-dynparam/: CMakeLists.txt  package.xml
mercury-dynparam/scripts/: controller.py
mercury-feedback/: CMakeLists.txt  package.xml
mercury-feedback/msg/: ManipulatorStatus.msg  PowerFeedback.msg  RobotsFeedback.msg
mercury-feedback/scripts/: feedback_node.py  feedback_protocol.py  ping.py  timeout.py
mercury-imu-tf/: CMakeLists.txt  package.xml
mercury-imu-tf/src/: imu-tf.cpp
mercury-joy/: CMakeLists.txt  package.xml
mercury-joy/cfg/: Joy.cfg
mercury-joy/launch/: basic.launch
mercury-joy/msg/: Joy.msg
mercury-joy/scripts/: controller.py  rumble.py
mercury-joy/srv/: Rumble.srv
mercury-laser-distance/: CMakeLists.txt  package.xml
mercury-laser-distance/scripts/: laser-node.py
mercury-launch/: CMakeLists.txt  package.xml
mercury-launch/launch/: laser.launch  ocu.launch  robot.launch  round.launch  trajectory.launch  webcam.launch  xsens_driver.launch
mercury-launch/launch/general/: movement-ocu.launch  movement-robot.launch  ocu.launch  robot.launch
mercury-mode-changer/: CMakeLists.txt  package.xml
mercury-mode-changer/scripts/: controller.py  mode_changer
mercury-netping/: CMakeLists.txt
mercury-netping/msg/: Ping.msg
mercury-netping/scripts/: netping.py  ping.py
mercury-ocu-driver/: CMakeLists.txt  package.xml
mercury-ocu-driver/scripts/: controller.py  ocu-driver-node.py  ocu_command.py  ocu_driver_node.py
mercury-power-management/: CMakeLists.txt  package.xml
mercury-power-management/msg/: States.msg
mercury-power-management/scripts/: controller.py  power_manager.py  socket_connection.py
mercury-state-controller/: LICENSE  package.xml
mercury-state-controller/msg/: State.msg
mercury-state-controller/scripts/: controller.py  state_controller
mercury-trajectory/: CMakeLists.txt  package.xml
mercury-trajectory/cfg/: Trajectory.cfg
mercury-trajectory/config/: joy.yaml  trajectory.yaml
mercury-trajectory/launch/: basic.launch
mercury-trajectory/msg/: TrajectoryData.msg
mercury-trajectory/scripts/: controller.py  socket_connection.py
mercury-trajectory/srv/: SetEnabled.srv
mercury-usb/: package.xml
mercury-usb/scripts/: usb-node.py
mercury-usb/udev/: 99-arka-items.rules  install.sh
mercury_common/: package.xml
mercury_common/msg/: MovementFeedback.msg  RobotsFeedback.msg
mercury_common/srv/: SetEnabled.srv
mercury_dynparam/scripts/: controller.py  dynparam
mercury_dynparam/srv/: Default.srv  Load.srv
mercury_feedback/: CMakeLists.txt
mercury_feedback/scripts/: feedback_node.py  feedback_protocol.py  feedback_saver_node.py
mercury_joy/: CMakeLists.txt
mercury_joy/launch/: basic.launch
mercury_joy/scripts/: controller.py  joy-node.py
mercury_netping/: package.xml
mercury_netping/scripts/: netping
mercury_ocu_driver/: CMakeLists.txt
mercury_power_management/: CMakeLists.txt
mercury_power_management/msg/: States.msg
mercury_power_management/scripts/: power_manager.py  socket_connection.py
mercury_state_controller/: CMakeLists.txt
mercury_state_controller/scripts/: controller.py
mercury_trajectory/: CMakeLists.txt
mercury_trajectory/cfg/: Trajectory.cfg
mercury_trajectory/config/: joy.yaml  trajectory.yaml
mercury_trajectory/launch/: basic.launch
mercury_trajectory/scripts/: controller.py  trajectory-node.py
mercury_usb/: CMakeLists.txt
mercury_usb/scripts/: usb-node.py
mercury_usb/udev/: 99-arka-items.rules  install.sh
udev/: 99-ocu.rules
webrtc/: config.json  install-docker.sh  run-webrtc.sh
webrtc/demo/: index.html  request.min.js  webrtc-config.js  webrtcstreamer.js
