<?xml version="1.0" ?>
<package format="2">
  <name>mercury_power_management</name>
  <version>0.0.1</version>
  <description> The mercury_power_management messages and services</description>

  <maintainer email="todo@mail.com">Arshia Nozarnezhad</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>